@@ -1,3 +1,33 @@
+set JAVA_OPTS=-Xms20g -Xmx20g ^
+-XX:+UseG1GC ^
+-XX:MaxGCPauseMillis=250 ^
+-XX:InitiatingHeapOccupancyPercent=30 ^
+-XX:G1ReservePercent=15 ^
+-XX:ConcGCThreads=2 ^
+-XX:ParallelGCThreads=8 ^
+-XX:+ParallelRefProcEnabled ^
+-XX:+AlwaysPreTouch ^
+-XX:+HeapDumpOnOutOfMemoryError ^
+-XX:HeapDumpPath=logs\mb_heapdump.hprof ^
+-XX:+PrintGCDetails ^
+-XX:+PrintGCDateStamps ^
+-Xloggc:logs\gc.log ^
+-XX:+UseGCLogFileRotation ^
+-XX:NumberOfGCLogFiles=10 ^
+-XX:GCLogFileSize=100M ^
+-Dspring.task.execution.pool.max-size=10 ^
+-Dspring.task.execution.pool.queue-capacity=50 ^
+-Dspring.tomcat.max-threads=50 ^
+-Dspring.tomcat.accept-count=100
+
+start "mb.local.com" cmd /c java %JAVA_OPTS% ^
+-jar mbserver.java ^
+> logs\mb.log 2>&1
+
+
+========================================================
+
+
 set JAVA_OPTS=-Xms32g -Xmx32g ^
 -XX:+UseG1GC ^
 -XX:MaxGCPauseMillis=200 ^
